# pygep

./: LICENSE  MANIFEST.in  README.md  juliapkg.json  pyproject.toml  setup_julia.py
.github/workflows/: python-publish.yml
pygep/core/: __init__.py  julia_interface.py  regressor.py
src/: __init__.py
src/core/: regressor.py
src/julia_env/: Project.toml
