[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygep"
version = "0.1.0"
description = "Python interface for GeneExpressionProgramming.jl"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Max Reissmann", email = "reissmann28@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "julia>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/maxreiss123/GeneExpressionProgramming.jl"
Repository = "https://github.com/maxreiss123/GeneExpressionProgramming.jl"
Documentation = "https://github.com/maxreiss123/GeneExpressionProgramming.jl"

[project.scripts]
pygep-setup = "pygep.core.julia_interface:install_julia_dependencies"

[tool.setuptools.packages.find]
where = ["."]
include = ["pygep*"]

[tool.setuptools.package-data]
pygep = ["julia_env/*"]

